--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p>When I'm not immersed in data, I enjoy singing 🎤 and staying active by playing sports like table tennis 🏓, cricket 🏏, and badminton 🏸.</p>
 
 <p>My core professional interests lie in machine learning and statistical modeling, and I'm particularly keen on exploring their applications in areas like quantitative risk. I'm eager to bring my analytical skills, practical experience, and enthusiasm for problem-solving to an organization where I can make a meaningful impact with data.</p>
-            <a href="Jit_Mondal_MD2411 (1).pdf" target="https://drive.google.com/file/d/1Z6iZYLj2yEztNv5LKkykcpNEHuMoHjyJ/view?usp=sharing" class="download-link">Download Full Resume (PDF)</a>
+            <a href="https://drive.google.com/file/d/1Z6iZYLj2yEztNv5LKkykcpNEHuMoHjyJ/view?usp=sharing" download="Jit_Mondal_Resume" class="download-link">Download Full Resume (PDF)</a>
         </div>
     </section>
 
@@ -71,8 +71,8 @@
             <ul>
                 <li>**Programming:** Python (Pandas, Scikit-learn, NumPy), SQL, R</li>
                 <li>**Machine Learning:** Supervised/Unsupervised Learning, Deep Learning (TensorFlow/PyTorch)</li>
-                <li>**Deployment:** Docker, AWS S3/EC2, Streamlit, Git/GitHub</li>
-                <li>**Visualization:** Matplotlib, Seaborn, Plotly, Tableau</li>
+                <li>**Deployment:**  Streamlit, Git/GitHub</li>
+                <li>**Visualization:** Matplotlib, Seaborn, Plotly, PowerBi</li>
             </ul>
         </div>
     </section>
@@ -88,15 +88,16 @@
                 <button type="submit">Send Message</button>
             </form>
             <div class="social-links">
-                <a href="https://linkedin.com/in/[your-id]" target="_blank">LinkedIn</a> |
-                <a href="https://github.com/[your-id]" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/jit-mondal-38056b248/" target="_blank">LinkedIn</a> |
+                <a href="https://github.com/JitaDeveloper" target="_blank">GitHub</a> |
+                <a href="mailto:hiiamjitmondal@gmail.com" target="_blank">Email</a>
             </div>
         </div>
     </section>
 
     <footer class="main-footer">
         <div class="container">
-            <p>&copy; 2025 [Your Name]. Built with HTML and CSS.</p>
+            <p>&copy; 2025 Jit Mondal. Built with HTML and CSS.</p>
         </div>
     </footer>
 
