--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p>When I'm not immersed in data, I enjoy singing 🎤 and staying active by playing sports like table tennis 🏓, cricket 🏏, and badminton 🏸.</p>
 
 <p>My core professional interests lie in machine learning and statistical modeling, and I'm particularly keen on exploring their applications in areas like quantitative risk. I'm eager to bring my analytical skills, practical experience, and enthusiasm for problem-solving to an organization where I can make a meaningful impact with data.</p>
-            <a href="https://drive.google.com/file/d/1Z6iZYLj2yEztNv5LKkykcpNEHuMoHjyJ/view?usp=sharing" download="Jit_Mondal_Resume" class="download-link">Download Full Resume (PDF)</a>
+            <a href="/" download="Jit_Mondal_Resume" class="download-link">Download Full Resume (PDF)</a>
         </div>
     </section>
 
@@ -54,13 +54,13 @@
             <article class="project-card">
                 <h3>Loan Approval Prediction</h3>
                 <p>This project developed a credit risk model (XGBoost, 98.65% accuracy) to predict loan approval, demonstrating expertise in feature selection, rigorous statistical diagnostics, and advanced ML implementation.</p>
-                <a href="https://github.com/JitaDeveloper/Loan-Approval-Prediction" class="detail-link">View Case Study →</a>
+                <a href="#" class="detail-link">View Case Study →</a>
             </article>
             
             <article class="project-card">
                 <h3>Electricity Demand Forecasting</h3>
                 <p>This project involved multi-seasonal time series forecasting (daily/yearly cycles) of hourly electricity demand, utilizing MSTL decomposition and a hybrid SARIMAX-enhanced linear model to achieve the lowest forecast error (MAE: 735.59).</p>
-                <a href="https://github.com/JitaDeveloper/Electricity-Consumption" class="detail-link">View Case Study →</a>
+                <a href="#" class="detail-link">View Case Study →</a>
             </article>
         </div>
     </section>
@@ -103,4 +103,5 @@
 
     </body>
     <script src="script.js"></script>
+
 </html>
