--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p>When I'm not immersed in data, I enjoy singing 🎤 and staying active by playing sports like table tennis 🏓, cricket 🏏, and badminton 🏸.</p>
 
 <p>My core professional interests lie in machine learning and statistical modeling, and I'm particularly keen on exploring their applications in areas like quantitative risk. I'm eager to bring my analytical skills, practical experience, and enthusiasm for problem-solving to an organization where I can make a meaningful impact with data.</p>
-            <a href="/" download="Jit_Mondal_Resume" class="download-link">Download Full Resume (PDF)</a>
+            <a href="https://drive.google.com/file/d/1U-qnIDli9Sqk-F5QX8I-FE7SpvE3Iv0i/view?usp=sharing" download="Jit_Mondal_Resume" class="download-link">Download Full Resume (PDF)</a>
         </div>
     </section>
 
@@ -105,3 +105,4 @@
     <script src="script.js"></script>
 
 </html>
+
