--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             <article class="project-card">
                 <h3>Loan Approval Prediction</h3>
                 <p>This project developed a credit risk model (XGBoost, 98.65% accuracy) to predict loan approval, demonstrating expertise in feature selection, rigorous statistical diagnostics, and advanced ML implementation.</p>
-                <a href="#" class="detail-link">View Case Study →</a>
+                <a href="https://github.com/JitaDeveloper/Loan-Approval-Prediction" class="detail-link">View Case Study →</a>
             </article>
             
             <article class="project-card">
                 <h3>Electricity Demand Forecasting</h3>
                 <p>This project involved multi-seasonal time series forecasting (daily/yearly cycles) of hourly electricity demand, utilizing MSTL decomposition and a hybrid SARIMAX-enhanced linear model to achieve the lowest forecast error (MAE: 735.59).</p>
-                <a href="#" class="detail-link">View Case Study →</a>
+                <a href="https://github.com/JitaDeveloper/Electricity-Demand-Prediction" class="detail-link">View Case Study →</a>
             </article>
         </div>
     </section>
@@ -105,4 +105,5 @@
     <script src="script.js"></script>
 
 </html>
+
 
