--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section id="contact" class="content-section contact-form">
         <div class="container">
             <h2>Get In Touch</h2>
-            <p>I'm available for freelance projects and full-time opportunities. Send me a message!</p>
+            <p>Send me a message!</p>
             <form action="submit_form.php" method="POST">
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
@@ -105,6 +105,7 @@
     <script src="script.js"></script>
 
 </html>
+
 
 
 
